--- a/admin_index.html
+++ b/admin_index.html
@@ -119,8 +119,8 @@
             <!-- Product items here -->
         </div>
 
-        <div class="product-grid">
-            <div class="product-item">
+        <section class="product-grid">
+            <article class="product-item">
                 <a  class="product-link">
                     <img src="images/budna_1.jpg.webp" alt="tricko">
                     <div class="product-name">Bunda_1</div>
@@ -132,9 +132,9 @@
                 <button class="admin-product-delete" aria-label="Delete product">
                     <img src="images/delete.png" alt="delete">
                 </button>
-            </div>
+            </article>
 
-            <div class="product-item">
+            <article class="product-item">
                 <a  class="product-link">
                     <img src="images/nohavice_1.webp" alt="tricko">
                     <div class="product-name">Nohavice_1</div>
@@ -146,9 +146,9 @@
                 <button class="admin-product-delete" aria-label="Delete product">
                     <img src="images/delete.png" alt="delete">
                 </button>
-            </div>
+            </article>
 
-            <div class="product-item">
+            <article class="product-item">
                 <a  class="product-link">
                     <img src="images/tricko.jpg" alt="tricko">
                     <div class="product-name">Tricko_1</div>
@@ -160,9 +160,9 @@
                 <button class="admin-product-delete" aria-label="Delete product">
                     <img src="images/delete.png" alt="delete">
                 </button>
-            </div>
+            </article>
 
-            <div class="product-item">
+            <article class="product-item">
                 <a  class="product-link">
                     <img src="images/bunda_2.webp" alt="tricko">
                     <div class="product-name">Bunda_2</div>
@@ -174,71 +174,67 @@
                 <button class="admin-product-delete" aria-label="Delete product">
                     <img src="images/delete.png" alt="delete">
                 </button>
-            </div>
-        </div>
+            </article>
+        </section>
     </section>
 
-    <section>
-        <div class="product-grid">
+    <section class="product-grid">
+        <article class="product-item">
+            <a class="product-link">
+                <img src="images/tricko_2.webp" alt="tricko">
+                <div class="product-name">Tricko_2</div>
+                <div class="price">100$</div>
+            </a>
+            <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
+                <img src="images/edit.png" alt="edit">
+            </button>
+            <button class="admin-product-delete" aria-label="Delete product">
+                <img src="images/delete.png" alt="delete">
+            </button>
+        </article>
 
-            <div class="product-grid">
-                <div class="product-item">
-                    <a class="product-link">
-                        <img src="images/tricko_2.webp" alt="tricko">
-                        <div class="product-name">Tricko_2</div>
-                        <div class="price">100$</div>
-                    </a>
-                    <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
-                        <img src="images/edit.png" alt="edit">
-                    </button>
-                    <button class="admin-product-delete" aria-label="Delete product">
-                        <img src="images/delete.png" alt="delete">
-                    </button>
-                </div>
+        <article class="product-item">
+            <a class="product-link">
+                <img src="images/kosela_1.webp" alt="tricko">
+                <div class="product-name">Kosela_1</div>
+                <div class="price">100$</div>
+            </a>
+            <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
+                <img src="images/edit.png" alt="edit">
+            </button>
+            <button class="admin-product-delete" aria-label="Delete product">
+                <img src="images/delete.png" alt="delete">
+            </button>
+        </article>
 
-                <div class="product-item">
-                    <a class="product-link">
-                        <img src="images/kosela_1.webp" alt="tricko">
-                        <div class="product-name">Kosela_1</div>
-                        <div class="price">100$</div>
-                    </a>
-                    <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
-                        <img src="images/edit.png" alt="edit">
-                    </button>
-                    <button class="admin-product-delete" aria-label="Delete product">
-                        <img src="images/delete.png" alt="delete">
-                    </button>
-                </div>
+        <article class="product-item">
+            <a class="product-link">
+                <img src="images/mikina_1.webp" alt="tricko">
+                <div class="product-name">Mikina_1</div>
+                <div class="price">100$</div>
+            </a>
+            <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
+                <img src="images/edit.png" alt="edit">
+            </button>
+            <button class="admin-product-delete" aria-label="Delete product">
+                <img src="images/delete.png" alt="delete">
+            </button>
+        </article>
 
-                <div class="product-item">
-                    <a class="product-link">
-                        <img src="images/mikina_1.webp" alt="tricko">
-                        <div class="product-name">Mikina_1</div>
-                        <div class="price">100$</div>
-                    </a>
-                    <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
-                        <img src="images/edit.png" alt="edit">
-                    </button>
-                    <button class="admin-product-delete" aria-label="Delete product">
-                        <img src="images/delete.png" alt="delete">
-                    </button>
-                </div>
+        <article class="product-item">
+            <a class="product-link">
+                <img src="images/nohavice_2.webp" alt="tricko">
+                <div class="product-name">Nohavice_2</div>
+                <div class="price">100$</div>
+            </a>
+            <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
+                <img src="images/edit.png" alt="edit">
+            </button>
+            <button class="admin-product-delete" aria-label="Delete product">
+                <img src="images/delete.png" alt="delete">
+            </button>
+        </article>
 
-                <div class="product-item">
-                    <a class="product-link">
-                        <img src="images/nohavice_2.webp" alt="tricko">
-                        <div class="product-name">Nohavice_2</div>
-                        <div class="price">100$</div>
-                    </a>
-                    <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
-                        <img src="images/edit.png" alt="edit">
-                    </button>
-                    <button class="admin-product-delete" aria-label="Delete product">
-                        <img src="images/delete.png" alt="delete">
-                    </button>
-                </div>
-            </div>
-        </div>
     </section>
 </main>
 
