--- a/admin_products_view.html
+++ b/admin_products_view.html
@@ -108,42 +108,44 @@
 </header>
 
 <!-- FILTERS ON THE LEFT SIDE -->
-<div class="container">
-    <form class="filters">
-        <div class="filters-header">
-            <label id="filtre">Filtre</label>
-            <label><button id="reset-filters">Vymaž filtre</button></label>
-        </div>
+<main class="container">
+    <aside class="filters">
+        <form>
+            <div class="filters-header">
+                <h2 id="filtre">Filtre</h2>
+                <label><button id="reset-filters">Vymaž filtre</button></label>
+            </div>
 
-        <fieldset class="filter-section">
-            <h5>Farby</h5>
-            <label><input type="checkbox" /> Modrá</label><br>
-            <label><input type="checkbox" /> Zelená</label><br>
-            <label><input type="checkbox" /> Červená</label><br>
-            <label><input type="checkbox" /> Fialová</label>
-        </fieldset>
+            <fieldset class="filter-section">
+                <h3>Farby</h3>
+                <label><input type="checkbox" /> Modrá</label><br>
+                <label><input type="checkbox" /> Zelená</label><br>
+                <label><input type="checkbox" /> Červená</label><br>
+                <label><input type="checkbox" /> Fialová</label>
+            </fieldset>
 
-        <fieldset class="filter-section">
-            <h5>Značka</h5>
-            <label><input type="checkbox" /> Nike</label><br>
-            <label><input type="checkbox" /> Adidas</label><br>
-            <label><input type="checkbox" /> Puma</label><br>
-            <label><input type="checkbox" /> Reebok</label>
-        </fieldset>
+            <fieldset class="filter-section">
+                <h3>Značka</h3>
+                <label><input type="checkbox" /> Nike</label><br>
+                <label><input type="checkbox" /> Adidas</label><br>
+                <label><input type="checkbox" /> Puma</label><br>
+                <label><input type="checkbox" /> Reebok</label>
+            </fieldset>
 
-        <fieldset class="filter-section">
-            <h5>Cena</h5>
-            <input type="range" min="0" max="1000" id="price-range"/>
-            <label for="price-range">Najdrahšie <span id="range-value">500 $</span></label>
-        </fieldset>
+            <fieldset class="filter-section">
+                <h3>Cena</h3>
+                <input type="range" min="0" max="1000" id="price-range"/>
+                <label for="price-range">Najdrahšie <span id="range-value">500 $</span></label>
+            </fieldset>
 
-        <!--         mozno aj button  ale netreba -->
-        <!--        <button type="submit" class="apply-filters">Použiť filtre</button>-->
-    </form>
+            <!--         mozno aj button  ale netreba -->
+            <!--        <button type="submit" class="apply-filters">Použiť filtre</button>-->
+        </form>
+    </aside>
 
-    <main>
+    <section class="right-section">
         <!-- SORT CONTAINER ABOVE PRODUCTS -->
-        <div class="sort-container">
+        <section class="sort-container">
             <div class="sort-header">
                 <label for="sort-select">Zoradiť podľa:</label>
                 <select id="sort-select">
@@ -154,11 +156,11 @@
                 </select>
             </div>
             <span class="product-count">Zobrazených 9 produktov</span>
-        </div>
+        </section>
 
         <section class="product-grid">
             <!-- EXAMPLE PRODUCT ITEMS -->
-            <div class="product-item">
+            <article class="product-item">
                 <a href="#" class="product-link">
                     <img src="images/tricko.jpg" alt="tricko">
                     <div class="product-name"><span>Tricko_1</span></div>
@@ -171,10 +173,10 @@
                 <button class="admin-product-delete" aria-label="Delete product">
                     <img src="images/delete.png" alt="delete">
                 </button>
-            </div>
+            </article>
 
 
-            <div class="product-item">
+            <article class="product-item">
                 <a href="#" class="product-link">
                     <img src="images/nohavice_1.webp" alt="tricko">
                     <div class="product-name"><span>Nohavice_1</span></div>
@@ -187,10 +189,10 @@
                 <button class="admin-product-delete" aria-label="Delete product">
                     <img src="images/delete.png" alt="delete">
                 </button>
-            </div>
+            </article>
 
 
-            <div class="product-item">
+            <article class="product-item">
                 <a href="#" class="product-link">
                     <img src="images/nohavice_2.webp" alt="tricko">
                     <div class="product-name"><span>Nohavice_2</span></div>
@@ -203,10 +205,10 @@
                 <button class="admin-product-delete" aria-label="Delete product">
                     <img src="images/delete.png" alt="delete">
                 </button>
-            </div>
+            </article>
 
 
-            <div class="product-item">
+            <article class="product-item">
                 <a href="#" class="product-link">
                     <img src="images/kosela_1.webp" alt="tricko">
                     <div class="product-name"><span>Kosela_1</span></div>
@@ -219,9 +221,9 @@
                 <button class="admin-product-delete" aria-label="Delete product">
                     <img src="images/delete.png" alt="delete">
                 </button>
-            </div>
+            </article>
 
-            <div class="product-item">
+            <article class="product-item">
                 <a href="#" class="product-link">
                     <img src="images/kosela_2.webp" alt="tricko">
                     <div class="product-name"><span>Kosela_2</span></div>
@@ -234,10 +236,10 @@
                 <button class="admin-product-delete" aria-label="Delete product">
                     <img src="images/delete.png" alt="delete">
                 </button>
-            </div>
+            </article>
 
 
-            <div class="product-item">
+            <article class="product-item">
                 <a href="#" class="product-link">
                     <img src="images/nohavice_3.webp" alt="tricko">
                     <div class="product-name"><span>Nohavice_3</span></div>
@@ -250,9 +252,9 @@
                 <button class="admin-product-delete" aria-label="Delete product">
                     <img src="images/delete.png" alt="delete">
                 </button>
-            </div>
+            </article>
 
-            <div class="product-item">
+            <article class="product-item">
                 <a href="#" class="product-link">
                     <img src="images/mikina_2.webp" alt="tricko">
                     <div class="product-name"><span>Mikina_2</span></div>
@@ -265,7 +267,7 @@
                 <button class="admin-product-delete" aria-label="Delete product">
                     <img src="images/delete.png" alt="delete">
                 </button>
-            </div>
+            </article>
 
             <!-- ... more products ... -->
         </section>
@@ -277,8 +279,8 @@
                 <a href="#" id="right-arrow">&rarr;</a>
             </div>
         </nav>
-    </main>
-</div>
+    </section>
+</main>
 
 
 
