--- a/checkout_shipping.html
+++ b/checkout_shipping.html
@@ -135,15 +135,15 @@
     </div>
     <form>
       <fieldset>
-        <div class="shipping-option">
+        <section class="shipping-option">
           <label><input type="radio" name="delivery" checked>Packeta kuriér</label>
           <small>3‑5 Pracovné dni</small>
-        </div>
+        </section>
 
-        <div class="shipping-option">
+        <section class="shipping-option">
           <label><input type="radio" name="delivery">Slovenská pošta kuriér</label>
           <small>4‑5 Pracovné dni</small>
-        </div>
+        </section>
       </fieldset>
       <button type="button" onclick="window.location.href='checkout-choosing-payment.html'">Pokračovať k platbe</button>
     </form>
