--- a/index.html
+++ b/index.html
@@ -134,14 +134,11 @@
     <!-- Section 1: Najnovsie produkty -->
     <section>
         <div class="section-header">
-            <div class="section-title">Najnovšie produkty</div>
+            <h1 class="section-title">Najnovšie produkty</h1>
             <button class="shop-all-btn" onclick="window.location.href='products-view.html'">Shop All</button>
         </div>
-        <div class="product-grid">
-            <!-- Product items here -->
-        </div>
 
-        <div class="product-grid">
+        <section class="product-grid">
             <a href="product-detail.html" class="product-item">
                 <img src="images/budna_1.jpg.webp" alt="tricko">
                 <div class="product-name">Bunda_1</div>
@@ -162,11 +159,11 @@
                 <div class="product-name">Bunda_2</div>
                 <div class="price">100$</div>
             </a>
-        </div>
+        </section>
     </section>
 
     <section>
-        <div class="product-grid">
+        <section class="product-grid">
             <a href="product-detail.html" class="product-item">
                 <img src="images/tricko_2.webp" alt="tricko">
                 <div class="product-name">Tricko_2</div>
@@ -187,16 +184,16 @@
                 <div class="product-name">Nohavice_2</div>
                 <div class="price">100$</div>
             </a>
-        </div>
+        </section>
     </section>
 
     <!-- Section 2: Odporucane produkty-->
     <section style="margin-top: 3rem;">
-        <div class="section-header">
-            <div class="section-title">Odporúčané produkty</div>
+        <section class="section-header">
+            <h1 class="section-title">Odporúčané produkty</h1>
             <button class="shop-all-btn" onclick="window.location.href='products-view.html'">Shop All</button>
-        </div>
-        <div class="product-grid">
+        </section>
+        <section class="product-grid">
             <a href="product-detail.html" class="product-item">
                 <img src="images/tricko_3.webp" alt="tricko">
                 <div class="product-name">Tricko_3</div>
@@ -217,7 +214,7 @@
                 <div class="product-name">Nohavice_3</div>
                 <div class="price">100$</div>
             </a>
-        </div>
+        </section>
     </section>
 </main>
 
