--- a/oder_confirmed.html
+++ b/oder_confirmed.html
@@ -122,12 +122,12 @@
 <!-- ********************************************* END OF NAVBAR  **************************************************-->
 
 <main>
-    <div class="order-confirmation">
+    <section class="order-confirmation">
         <h1>Vaša objednávka č. xxxxxx bola úspešne vytvorená</h1>
         <button class="back-button" onclick="window.location.href='index.html'">
             Späť na domovskú obrazovku
         </button>
-    </div>
+    </section>
 </main>
 
 
