--- a/product-detail.html
+++ b/product-detail.html
@@ -125,30 +125,30 @@
 
 
 
-<div class="container">
-  <div class="product-images-grid" >
-     <div class="product-image-div">
+<section class="container">
+  <section class="product-images-grid" >
+     <article class="product-image-div">
         <img src="images/nohavice_1.webp" data-src="images/tricko.jpg" alt="tricko" class="product-image">
-     </div>
-    <div class="product-image-div">
+     </article>
+    <article class="product-image-div">
       <img src="images/nohavice_1_2.webp" data-src="images/nohavice_1_2.webp" alt="tricko" class="product-image">
-    </div>
-    <div class="product-image-div">
+    </article>
+    <article class="product-image-div">
       <img src="images/nohavice_1_3.webp" data-src="images/nohavice_1_3.webp" alt="tricko" class="product-image">
-    </div>
-    <div class="product-image-div">
+    </article>
+    <article class="product-image-div">
       <img src="images/nohavice_1_4.webp" data-src="images/nohavice_1_4.webp" alt="tricko" class="product-image">
-    </div>
-  </div>
+    </article>
+  </section>
 
 <!--  Just thumbnail-->
-  <div id="lightbox" class="lightbox">
+  <section id="lightbox" class="lightbox">
     <img class="lightbox-img" src="" alt="">
-  </div>
+  </section>
 
 
 
-  <div class="product-description">
+  <section class="product-description">
 
     <h1>
       Work pant
@@ -163,9 +163,9 @@
     </p>
     <br><br>
 
-    <h3>
+    <h2>
       Size
-    </h3>
+    </h2>
 
 
       <fieldset class="size-selector">
@@ -188,7 +188,7 @@
       </fieldset>
 
 
-    <div class="product-quantity">
+    <section class="product-quantity">
       <div class="quantity-selector">
         <button type="button">−</button>
         <span class="quantity">1</span>
@@ -197,10 +197,10 @@
 
       <button class="add-to-cart" onclick="window.location.href='shopping_cart.html'">Pridaj do košíka</button>
 
-    </div>
-  </div>
+    </section>
+  </section>
 
-</div>
+</section>
 
 
 
