--- a/admin_edit_product_detail.html
+++ b/admin_edit_product_detail.html
@@ -103,8 +103,8 @@
 
 
 
-<div class="container">
-    <div class="product-images-grid" >
+<main class="container">
+    <section class="product-images-grid" >
         <div class="product-image-div">
             <img src="images/nohavice_1.webp" data-src="images/tricko.jpg" alt="tricko" class="product-image">
         </div>
@@ -117,7 +117,7 @@
         <div class="product-image-div">
             <img src="images/nohavice_1_4.webp" data-src="images/nohavice_1_4.webp" alt="tricko" class="product-image">
         </div>
-    </div>
+    </section>
 
     <!--  Just thumbnail-->
     <div id="lightbox" class="lightbox">
@@ -126,22 +126,22 @@
 
 
 
-    <div class="product-description">
+    <section class="product-description">
 
 
-        <label for="nazov" class="desc-labels" >Názov</label>
+        <h2 for="nazov" class="desc-labels" >Názov</h2>
         <input id="nazov" class="form-control mb-3" type="text" placeholder="Tričko_1">
 
-        <div class="mb-3">
-            <label class="desc-labels">Pohlavie</label><br>
+        <section class="mb-3">
+            <h2 class="desc-labels">Pohlavie</h2><br>
             <label><input type="checkbox"> Ženy</label>
             <label><input type="checkbox" checked> Muži</label>
             <label><input type="checkbox"> Deti</label>
-        </div>
+        </section>
 
         <div class="d-flex justify-content-between mb-3">
             <div class="type-column">
-                <label class="desc-labels">Typ</label>
+                <h2 class="desc-labels">Typ</h2>
                 <ul class="type-list">
                     <li data-value="obleczenie" class="selected">Oblečenie</li>
                     <li data-value="topanky">Topánky</li>
@@ -154,7 +154,7 @@
             </div>
 
             <div style="width: 50%;">
-                <label class="desc-labels" for="farba">Farba</label>
+                <h2 class="desc-labels" for="farba">Farba</h2>
                 <select id="farba" class="form-control mb-1">
                     <option value="cierna">Čierna</option>
                     <option value="cervena">Červená</option>
@@ -167,7 +167,7 @@
         </div>
 
 
-        <label class="desc-labels">Veľkosti</label>
+        <h2 class="desc-labels">Veľkosti</h2>
         <fieldset class="size-selector">
             <label><input type="checkbox" name="size" value="S"><span>S</span></label>
             <label><input type="checkbox" name="size" value="M" checked><span>M</span></label>
@@ -176,13 +176,13 @@
         </fieldset>
 
 
-        <label for="popis" class="desc-labels">Popis</label>
+        <h2 for="popis" class="desc-labels">Popis</h2>
         <textarea id="popis" class="form-control mb-3" rows="4" placeholder="Toto tričko je vyrobené z kávových zŕn a stojí 200 milionov eur."></textarea>
 
         <button class="add-to-store" onclick="window.location.href='admin_index.html'">Pridať</button>
-    </div>
+    </section>
 
-</div>
+</main>
 
 
 
