--- a/checkout-choosing-payment.html
+++ b/checkout-choosing-payment.html
@@ -134,18 +134,20 @@
       <span class="step active">Platba</span>
     </div>
     <form>
-      <div class="shipping-option">
-        <label><input type="radio" name="delivery" checked>Platobná karta</label>
-      </div>
+      <fieldset>
+<!--        <legend>Spôsob platby</legend>-->
+        <div class="shipping-option">
+          <label><input type="radio" name="delivery" checked>Platobná karta</label>
+        </div>
 
-      <div class="shipping-option">
-        <label><input type="radio" name="delivery">Apple pay</label>
-      </div>
+        <div class="shipping-option">
+          <label><input type="radio" name="delivery">Apple pay</label>
+        </div>
 
-      <div class="shipping-option">
-        <label><input type="radio" name="delivery">Pay pall</label>
-      </div>
-
+        <div class="shipping-option">
+          <label><input type="radio" name="delivery">Pay pall</label>
+        </div>
+      </fieldset>
       <button type="button" onclick="window.location.href='checkout-payment.html'">Pokračovať k platbe</button>
     </form>
   </section>
