--- a/login-page.html
+++ b/login-page.html
@@ -122,7 +122,7 @@
 <!-- ********************************************* END OF NAVBAR  **************************************************-->
 
 <main>
-    <div class="login-container">
+    <section class="login-container">
         <h1>Prihlásenie</h1>
 
         <form>
@@ -142,7 +142,7 @@
 
             <button type="button" class="btn admin-login" onclick="window.location.href='admin_index.html'">Prihlásiť sa ako admin (demo)</button>
         </form>
-    </div>
+    </section>
 </main>
 
 
